# PaperWeb

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
app/: config.py  consolidate.py  ingest.py  models.py  net.py  query.py  reindex_obsidian.py  runtime.py
app/agents/: __init__.py  cli.py  config.py  paperweb_agent.py  tools.py  tracing.py
app/cli/: __init__.py
app/consolidation/: topic_consolidator.py
app/crawlers/: base.py  mock.py  openreview_real.py  paper_merge.py  sources.py
app/extraction/: extractor.py  llm_provider.py
app/generation/: generator.py
app/intelligence/: __init__.py  institution_ranking.py  lab_coverage.py  loader.py  report.py  schema.py  taxonomy.py  topic_assignment.py  topic_stats.py
app/llm/: usage_tracker.py
app/normalization/: entity_normalizer.py
app/obsidian/: notes.py
app/paper_cards/: __init__.py  builder.py  extractor.py  index.py  schema.py  store.py  validator.py
app/parsing/: pdf_parser.py
app/prompts/: claim_extraction.txt  paper_extraction.txt  query_routing.txt  result_extraction.txt  topic_consolidation.txt
app/query_router/: router.py
app/retrieval/: engine.py  fusion.py
config/: paperweb.toml
data/: result_store.json  vector_store.json
scripts/: analyze_field_intelligence.py  llm_usage_dashboard.py
tests/: test_entity_normalization.py  test_fusion.py  test_ingestion_foundation.py  test_intelligence_taxonomy.py  test_llm_json_resilience.py  test_llm_roles_and_costs.py  test_paper_cards_tasks.py  test_query_routing_resilience.py  test_router_plan.py  test_schema_validation.py
(+18 files in other folders)
