[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperweb"
version = "0.1.0"
description = "Production-oriented MVP research-memory pipeline"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "httpx>=0.27",
  "openai>=1.40.0",
  "pdfplumber>=0.11.0",
  "tomli>=2.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
